# SDP12

Documents/Individual Reports/Dasha Kuznetsova/: SDPRept5.odt
Documents/Individual Reports/Juozas Kaziukenas/: report1.docx  report2.docx  report3-changed.odt  report3.docx  report3.odt  report4-changed.odt  report4.docx  report5.docx
Documents/Presentation/SDP_Presentation.key/: Part1-1.tiff  Part1-2.tiff  Part1.tiff  Part2-1.tiff  Part2-4.tiff  Part2.tiff  Part3-1.tiff  Part3-3.tiff  Part4-1.tiff  Part4-2.tiff  Part5-1.tiff  Part5.tiff  Part6.tiff  Picture1-1.tiff  Picture3-1.tiff  State Diagram.tiff
Documents/Presentation/Videos/: avoid.wmv  avoidandbehind.wmv  behind.wmv  gotoball.wmv  matchplay.wmv
Documents/Team Reports/: Report2.odt
Documents/Team Reports/Report1/: GroupRpt1.txt  report.tex
Documents/Team Reports/Report2/: bibliography.bib  report2.tex
Documents/Team Reports/Report3/: SDPGroupReport3.odt  report3.tex
Documents/Team Reports/Report4/: Report4.tex  (+1 more)
Documents/Testing/: RobotTesting.odt
Movement/Client/: .classpath
Movement/Server/: .classpath  .project
Vision/stable/: CMakeLists.txt  objdetection.cpp  objdetection.h  objdetectionutil.cpp  objdetectionutil.h  test_main.cpp
Vision/trunk/: Doxyfile
Vision/trunk/ObjectDetectionUtil/ObjectDetectionUtil/src/: CMakeLists.txt  objdetectionutil.cpp  objdetectionutil.h  test_main.cpp
robot_tests/: Forward.java  Forward2.java  MotorB.java  Penalty.java  Pilot.java  PilotReverse.java  Reverse.java  Sensor.java  SensorAndKick.java  SpeedDemo.java  Tune.java  Turn.java  Turn2.java
(+223 files in other folders)
